--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="/kodekenobi.github.io/assets/images/favicon-transparent.png"
+      href="https://raw.githubusercontent.com/KodeKenobi/kodekenobi.github.io/refs/heads/main/public/assets/images/favicon-transparent.png"
       id="favicon"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -31,7 +31,8 @@
 
       // Set favicon path dynamically
       const faviconElement = document.getElementById("favicon");
-      const faviconPath = `${basePath}/assets/images/favicon-transparent.png`;
+      const faviconPath =
+        "https://raw.githubusercontent.com/KodeKenobi/kodekenobi.github.io/refs/heads/main/public/assets/images/favicon-transparent.png";
       faviconElement.href = faviconPath;
 
       console.log("🔍 Favicon Element:", faviconElement);
@@ -113,7 +114,8 @@
             isVisible = !isVisible;
 
             // Update favicon with logging
-            const newFaviconPath = `${basePath}/assets/images/favicon-transparent.png`;
+            const newFaviconPath =
+              "https://raw.githubusercontent.com/KodeKenobi/kodekenobi.github.io/refs/heads/main/public/assets/images/favicon-transparent.png";
             console.log("🔄 Updating favicon to:", newFaviconPath);
             favicon.href = newFaviconPath;
 
@@ -124,7 +126,8 @@
           console.log("👁️ Tab visibility changed: Visible");
           // Stop blinking and reset to original when tab is active
           clearInterval(blinkInterval);
-          const resetFaviconPath = `${basePath}/assets/images/favicon-transparent.png`;
+          const resetFaviconPath =
+            "https://raw.githubusercontent.com/KodeKenobi/kodekenobi.github.io/refs/heads/main/public/assets/images/favicon-transparent.png";
           console.log("🔄 Resetting favicon to:", resetFaviconPath);
           favicon.href = resetFaviconPath;
           pageTitle.textContent = originalTitle;
@@ -153,7 +156,7 @@
         }
       })(window.location);
     </script>
-    <script type="module" crossorigin src="/kodekenobi.github.io/assets/main.CwtGqEOr.js"></script>
+    <script type="module" crossorigin src="/kodekenobi.github.io/assets/main.D_ru0zwk.js"></script>
     <link rel="stylesheet" crossorigin href="/kodekenobi.github.io/assets/main.Bblvy-IX.css">
   </head>
   <body>
