--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <script>
       // Set the module source dynamically
       const mainScript = document.getElementById("mainScript");
-      mainScript.src = `${basePath}/src/main.tsx`;
+      mainScript.src = `${basePath}/assets/main.B5Qt9EMX.js`;
 
       console.log("🔄 React Application Script Loading Started");
       // Check if root element exists
