--- a/index.html
+++ b/index.html
@@ -160,18 +160,12 @@
         }
       })(window.location);
     </script>
-    <script type="module" crossorigin src="/kodekenobi.github.io/assets/main.B5Qt9EMX.js"></script>
+    <script type="module" crossorigin src="/kodekenobi.github.io/assets/main.DQDe59EZ.js"></script>
+    <link rel="stylesheet" crossorigin href="/kodekenobi.github.io/assets/main.Bblvy-IX.css">
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" id="mainScript"></script>
+    <div id="root"></div>
     <script>
-      // Set the module source dynamically
-      const mainScript = document.getElementById("mainScript");
-      const scriptPath = `${basePath}/assets/main.B5Qt9EMX.js`;
-      console.log("📦 Loading script from:", scriptPath);
-      mainScript.src = scriptPath;
-
       console.log("🔄 React Application Script Loading Started");
       // Check if root element exists
       const rootElement = document.getElementById("root");
