--- a/index.html
+++ b/index.html
@@ -3,32 +3,175 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello World</title>
+    <title>Kode Kenobi</title>
     <style>
-      .main-button {
-        background-color: #4caf50;
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;
-        border-radius: 4px;
-        transition: background-color 0.3s;
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
       }
-      .main-button:hover {
-        background-color: #45a049;
+      .min-h-screen {
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: linear-gradient(to bottom right, #1a1a1a, #2d2d2d, #1a1a1a);
+        padding: 1rem;
+      }
+      .terminal-window {
+        width: 100%;
+        border: 1px solid #4a4a4a;
+        border-radius: 0.75rem;
+        background: linear-gradient(to bottom right, #1a1a1a, #2d2d2d, #1a1a1a);
+        box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+        padding: 1rem;
+      }
+      .terminal-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0.5rem 1rem;
+        border-bottom: 1px solid #4a4a4a;
+      }
+      .terminal-button {
+        width: 12px;
+        height: 12px;
+        border-radius: 50%;
+        margin-right: 8px;
+      }
+      .bg-terminal-red {
+        background-color: #ff5f56;
+      }
+      .bg-terminal-yellow {
+        background-color: #ffbd2e;
+      }
+      .bg-terminal-green {
+        background-color: #27c93f;
+      }
+      .terminal-content {
+        padding: 1rem;
+        color: #e0e0e0;
+        font-family: "Courier New", Courier, monospace;
+      }
+      .topic-header {
+        color: #4ade80;
+        font-weight: bold;
+        margin-top: 1.5rem;
+        margin-bottom: 0.5rem;
+      }
+      .topic-text {
+        color: #e0e0e0;
+        margin-bottom: 1rem;
+      }
+      .social-link {
+        color: #e0e0e0;
+        text-decoration: none;
+        transition: all 0.2s;
+      }
+      .social-link:hover {
+        transform: translateY(-2px);
+      }
+      .animate-blink {
+        animation: blink 1s infinite;
+      }
+      @keyframes blink {
+        50% {
+          opacity: 0;
+        }
+      }
+      .animate-fade-in {
+        animation: fadeIn 0.5s ease-in;
+      }
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
       }
     </style>
   </head>
   <body>
-    <div id="root"></div>
-    <button class="main-button" onclick="window.location.href='/main'">
-      Go to Main
-    </button>
-    <!-- <script type="module" src="/src/main.tsx"></script> -->
+    <div class="min-h-screen">
+      <div class="terminal-window">
+        <div class="terminal-header">
+          <div style="display: flex; align-items: center">
+            <div class="terminal-button bg-terminal-red"></div>
+            <div class="terminal-button bg-terminal-yellow"></div>
+            <div class="terminal-button bg-terminal-green"></div>
+          </div>
+          <div
+            style="color: #e0e0e0; font-family: monospace; font-size: 0.875rem"
+          >
+            kode@kenobi:~
+          </div>
+        </div>
+        <div class="terminal-content">
+          <div class="animate-fade-in">
+            <div
+              style="
+                text-align: center;
+                font-size: 1.5rem;
+                font-weight: bold;
+                color: #4ade80;
+                margin-bottom: 1.5rem;
+              "
+            >
+              Kode Kenobi<span class="animate-blink">_</span>
+            </div>
+
+            <div class="topic-header">COMPANY NAME</div>
+            <div class="topic-text">Kode Kenobi</div>
+
+            <div class="topic-header">DEVELOPER NICK(S)</div>
+            <div class="topic-text">
+              Kenobi, General Kenobi, Kobe, Kopenikus
+            </div>
+
+            <div class="topic-header">DESCRIPTION</div>
+            <div class="topic-text">
+              MERN Stack Specialist · React.js, React Native, Redux, Next.js,
+              TypeScript, Tailwind CSS, Material UI, AWS, Firebase, MongoDB,
+              REST, GraphQL, SQL, Node.js, Docker, Kubernetes, Cognito, Expo,
+              Supabase, CI/CD, GitHub Actions, Vercel, Linux, Bash, Agile,
+              Figma, OpenAI API, and more.
+            </div>
+
+            <div class="topic-header">CONTACT METHODS</div>
+            <div class="topic-text">
+              <a
+                href="mailto:kodekenobi@gmail.com"
+                style="color: #4ade80; text-decoration: none"
+              >
+                E-mail
+              </a>
+              - This would be the best way to contact me.
+            </div>
+
+            <div class="topic-header">WEBSITE</div>
+            <div class="topic-text">
+              Now, introductions aside, kindly visit my website
+              <a href="/home.html" style="color: #4ade80; text-decoration: none"
+                >here</a
+              >.
+            </div>
+
+            <div class="topic-header">My C.V</div>
+            <div class="topic-text">
+              You can download my C.V
+              <a
+                href="/assets/docs/cv.pdf"
+                style="color: #4ade80; text-decoration: none"
+                download
+              >
+                here </a
+              >.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
