--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
         }
       })(window.location);
     </script>
-    <script type="module" crossorigin src="/assets/main.CdexWir4.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main.BHnccNn_.css">
+    <script type="module" crossorigin src="/kodekenobi.github.io/assets/main.DHjtHjpI.js"></script>
+    <link rel="stylesheet" crossorigin href="/kodekenobi.github.io/assets/main.BHnccNn_.css">
   </head>
   <body>
     <div id="root"></div>
