--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
     <script>
       log("React Application Script Loading Started");
       // Check if root element exists
