--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
         }
       })(window.location);
     </script>
-    <script type="module" crossorigin src="/assets/main.DKnCw3rg.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main.BK3uESZu.css">
+    <script type="module" crossorigin src="/assets/main.D8oj8mP7.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main.Bc_HnCYr.css">
   </head>
   <body>
     <div id="root"></div>
