--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
         }
       })(window.location);
     </script>
-    <script type="module" crossorigin src="/assets/main.C8zE1OvM.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main.Cbkei4Wm.css">
+    <script type="module" crossorigin src="/assets/main.Mz8ydwE-.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main.96VixRhn.css">
   </head>
   <body>
     <div id="root"></div>
